 # Fixed issue [#21854] Replace featured strings with JFEATURED (Roland Dalmulder).
 # Fixed issue [#21841] Make atomic well formed (Rouven Weßling).
 # Fixed issue [#21764] calendar.js doesn't work with Firefox and Safari when XHTML is used (Rouven Weßling).
 # Fixed issue [#21631] user menu module [sample data] (Brian Teeman, Michael Babker).

15-Aug-2010 Mark Dexter
 # [#21558] Feed datetime formats are invalid
 # [#21756] Notices when a contact is unpublished but linked 

15-Aug-2010 Jean-Marie Simonet
 # [#21832] Submenu renders <a>-tag without link. Thanks Hannes.
 # [#21834] Featured contact only showing items from the root category and ignoring state. Thanks Elin.
 $ Correcting a string value.
 # [#21856] Unpublished items showing in weblinks and news feed category views. Thanks Elin.
 
13-Aug-2010 Mark Dexter
 # Sample data fixes (spelling errors and rebuild #__menus)
 # Oops! Fixed syntax error in sample_data.sql.

13-Aug-2010 Jean-Marie Simonet
 # [#21828] Params and drilldown refactorings in contacts. Thanks Bill and Dennis

12-Aug-2010 Jean-Marie Simonet
 ^ [#21690] filter order in extension manager:manage. Thanks Bill and Amy
 # [#21609] Force admin logout button for all user levels
 # [#21784] Update TinyMCE to current version (3.3.8)

11-Aug-2010 Jean-Marie Simonet
 # [#21807] newsfeeds - implement drilldown from categories (Bill and JM)

10-Aug-2010 Andrew Eddie
 # Fixed issue [#21623] 303 redirections cause page subresources to be reloaded on WebKit browsers (Nicholas Dionysopoulos).

10-Aug-2010 Jean-Marie Simonet
 # [#21787] weblinks - provide specific params for categories (Bill and JM)
 # [#21783] Single newsfeed layout on drill down is using title not name. Thanks Elin.

10-Aug-2010 Andrew Eddie
 # Fixed issue [#21648] No e-mail sent to newly created users (via back-end) (Mārcis Kaksis).
 # Fixed issue [#21601] JDatabaseQuery fails on delete (Harald Leithner, Omar Ramos).